--- a/part-3/22-checkout/index.html
+++ b/part-3/22-checkout/index.html
@@ -38,7 +38,20 @@
           <h2 class="checkout__title">Checkout</h2>
           <form method="GET" id="checkout-form" class="checkout__form">
             <!-- Add the form fields here -->
-
+            <div>
+              <label for="customer-name-input">Customer Name</label>
+              <input id="customer-name-input" type="text" name="customer-name" />
+            </div>
+            <br />
+            <div>
+              <label for="customer-email-input">Customer Email</label>
+              <input id="customer-email-input" type="email" name="customer-email" />
+            </div>
+            <br />
+            <div>
+              <label for="customer-phone-input">Customer Phone</label>
+              <input id="customer-phone-input" type="tel" name="customer-phone" />
+            </div>
             <button type="submit">Complete Purchase</button>
           </form>
         </div>
