--- a/part-3/23-comments/index.html
+++ b/part-3/23-comments/index.html
@@ -32,6 +32,11 @@
           <p>Add your comments and let us know what you think!</p>
 
           <!-- Your comment form goes here -->
+          <form method="GET">
+            <label for="message-input">Add Your Message</label>
+            <textarea id="message-input" type="text" name="comment"></textarea>
+            <button>Send Comment</button>
+          </form>
         </div>
       </main>
     </div>
