adding for and id

--- a/part-3/26-checkout-groups/index.html
+++ b/part-3/26-checkout-groups/index.html
@@ -40,25 +40,33 @@
             <!-- Add the form fields here -->
             <fieldset>
               <legend>Billing Address</legend>
-              <label>Address Line 1 </label>
-              <input type="text" name="Address Line 1" /><br />
-              <label>Address Line 2 </label>
-              <input type="text" name="Address Line 2" /><br />
-              <label>Postcode</label>
-              <input type="text" name="Postcode" /><br />
-              <label>City</label>
-              <input type="text" name="City" /><br />
+              <label for="address Line 1">Address Line 1 </label>
+              <input id="address Line 1" type="text" name="Address Line 1" /><br />
+              <label for="address Line 2">Address Line 2 </label>
+              <input id="address Line 2" type="text" name="Address Line 2" /><br />
+              <label for="postcode">Postcode</label>
+              <input id="postcode" type="text" name="Postcode" /><br />
+              <label for="city">City</label>
+              <input id="city" type="text" name="City" /><br />
             </fieldset>
             <fieldset>
               <legend>Delivery Address</legend>
-              <label>Address Line 1 </label>
-              <input type="text" name="Delivery Address Line 1" /><br />
-              <label>Address Line 2 </label>
-              <input type="text" name="Delivery Address Line 2" /><br />
-              <label>Postcode</label>
-              <input type="text" name="Delivery Postcode" /><br />
-              <label>City</label>
-              <input type="text" name="Delivery City" /><br />
+              <label for="Delivery Address Line 1">Address Line 1 </label>
+              <input
+                id="Delivery Address Line 1"
+                type="text"
+                name="Delivery Address Line 1"
+              /><br />
+              <label for="Delivery Address Line 2">Address Line 2 </label>
+              <input
+                id="Delivery Address Line 2"
+                type="text"
+                name="Delivery Address Line 2"
+              /><br />
+              <label for="Delivery Postcode">Postcode</label>
+              <input id="Delivery Postcode" type="text" name="Delivery Postcode" /><br />
+              <label for="Delivery City">City</label>
+              <input id="Delivery City" type="text" name="Delivery City" /><br />
             </fieldset>
 
             <button type="submit">Complete Purchase</button>
